--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     
     <body>
-     this is a project
+     <script>
+       alert("안녕하세요");
+      </script>?
       
     </body>
 
