--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
      <script>
-        document.write("dd");
+        document.write("안녕하세요");
       </script>
       ?
     </body>
