--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     
     <body>
      <script>
-        document.write("HI!! I'm a programmer!!");
+        document.write("<a href=\"www.naver.com\">Ss</a>")
       </script>
-      ?
+      
     </body>
 
 </html>
