--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
      <script>
-        document.write("<a href\"https://www.naver.com\">Ss</a>")
+        document.write("<a href=\"https://www.naver.com\">Ss</a>")
       </script>
       
     </body>
