--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
     
     <body>
-     <script>
-        document.write("<a href=\"https://www.naver.com\">Ss</a>")
-      </script>
+      <a href="naver.com"> os </a>
       
     </body>
 
