--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     </head>
     
     <body>
-      <a href="naver.com"> os </a>
-      
-    </body>
+      <script>
+        var name = prompt("당신의 이름을 입력하세연");
+        if(name == "최지원")
+        {
+          alert("최지원 존못");
+        }
+        else if(name == "안동국")
+        {
+         alert("안동국");
+        }
+        else
+        {
+          alert("관심 없어연");
+        }
+      </body>
 
 </html>
