--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         else if(name == "안동국")
         {
-         alert("안동국");
+         alert("안동국 존잘");
         }
         else
         {
