--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         {
           alert("최지원 존못");
         }
+        else if (name == "손석우")
+        {
+          alert("손석우 씹 존못");
+        }
         else if(name == "안동국")
         {
          alert("안동국 존잘");
