--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var name = prompt("당신의 이름을 입력하세연");
         if (name == "최지원" || name == "손석우" || name == "서호영")
         {
-          alert(name == " 존못");
+          alert(name + " 존못");
         }
         else if(name == "안동국")
         {
