--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GITHUB</title>
+    <title><strong>GITHUB</strong></title>
     <meta charset="ANSI">
     </head>
     
