--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title label="GITHUB">깃 허브</title>
+    <title style="color: red;">깃 허브</title>
     <meta charset="ANSI">
     </head>
     
