--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title style="color: red;">깃 허브</title>
+    <title>깃 허브</title>
     <meta charset="ANSI">
     </head>
     
     <body>
       <script>
         var name = prompt("당신의 이름을 입력하세연");
+        var AN;
         if (name == "최지원" || name == "손석우" || name == "서호영")
         {
-          alert(name + " 존못");
+          AN = alert(name + " 존못");
         }
         else if(name == "안동국")
         {
@@ -22,6 +23,7 @@
           alert("관심 없어연");
           alert("꺼져");
         }
+        loacation.write(AN);
       </script>
       </body>
 
