--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           alert("관심 없어연");
           alert("꺼져");
         }
-        location.write(AN);
+        document.write(AN);
       </script>
       </body>
 
