--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
       <script>
         var name = prompt("당신의 이름을 입력하세연");
-        var AN;
+        var AN = name;
         if (name == "최지원" || name == "손석우" || name == "서호영")
         {
-          AN = alert(name + " 존못");
+          alert(name + " 존못");
         }
         else if(name == "안동국")
         {
