--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
         if (name == "최지원" || name == "손석우" || name == "서호영")
         {
           alert(name + " 존못");
+          AN += "은 존못";
         }
         else if(name == "안동국")
         {
          alert("안동국 존잘");
+          AN += "은 존잘";
         }
         else
         {
           alert("관심 없어연");
           alert("꺼져");
+          AN = "관심없어연";
         }
         document.write(AN);
       </script>
