--- a/index.html
+++ b/index.html
@@ -7,27 +7,14 @@
     </head>
     
     <body>
+      <form action="checking.php" method="POST">
+        <input type="hidden" value="default" id='name' name='name'>
+        <input type="submit" value="submit">
+      </form>
       <script>
-        var name = prompt("당신의 이름을 입력하세연");
-        var AN = name;
-        if (name == "최지원" || name == "손석우" || name == "서호영")
-        {
-          alert(name + " 존못");
-          AN += "은(는) 존못";
-        }
-        else if(name == "안동국")
-        {
-         alert("안동국 존잘");
-          AN += "은 존잘";
-        }
-        else
-        {
-          alert("관심 없어연");
-          alert("꺼져");
-          AN = "관심없어연";
-        }
-        document.write(AN);
+        var name = prompt("이름 적으세욘");
+        document.getElementById("name").innerHTML = name;
       </script>
-      </body>
+  </body>
 
 </html>
