--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <input type="submit" value="submit">
       </form>
       <script>
-        var name = prompt("이름 적으세욘");
-        document.getElementById("name").innerHTML = name;
+        document.getElementById('name').innerHTML = prompt("이름 적어");
       </script>
   </body>
 
