--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,7 +11,8 @@
         <input type="submit" value="submit">
       </form>
       <script>
-        document.getElementById('name').innerHTML = prompt("이름 적어");
+        var name = prompt("이름 적어");
+        document.getElementById('name').innerHTML = name;
       </script>
   </body>
 
