--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
       <form action="checking.php" method="POST">
-        <input type="hidden" value="default" id='name' name='name'>
+        <input type="text" value="default" id='name' name='name'>
         <input type="submit" value="submit">
       </form>
       <script>
