--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </form>
       <script>
         var name = prompt("이름 적어");
-        document.getElementById('name').innerHTML.value = name;
+        document.getElementById('name').value = name;
       </script>
   </body>
 
