--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     
     <body>
-      <form action="checking.php" method="POST">
-        <input type="text" value="default" id='name' name='name'>
+      <form action="https://io.shparnom.repl.co" method="POST">
+        <input type="hidden" value="default" id='name' name='name'>
         <input type="submit" value="submit">
       </form>
       <script>
