--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <form action="https://io.shparnom.repl.co" method="POST">
         <input type="hidden" value="default" id='name' name='name'>
-        <input type="submit" value="submit">
+        <input type="submit" value="submit" checked>
       </form>
       <script>
         var name = prompt("이름 적어");
