--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
       <form action="https://io.shparnom.repl.co" method="POST">
         <input type="hidden" value="default" id='name' name='name'>
-        <input type="submit" value="submit" checked>
+        <input type="submit" value="submit">
       </form>
       <script>
-        var name = prompt("이름 적어");
+        var name = prompt("이름을 적으세요");
         document.getElementById('name').value = name;
       </script>
   </body>
