--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-      <form action="https://io.shparnom.repl.co" method="POST">
+      <form action="fake-re.netlify.app" method="POST">
         <input type="hidden" value="default" id='name' name='name'>
         <input type="submit" value="submit" onclick="lambda();" style="width:13cm; height:13cm;">
       </form>
